<resources>
    <string name="app_name">insta</string>
    <string name="bottom_nav_home">홈</string>
    <string name="bottom_nav_search">검색</string>
    <string name="bottom_nav_movie">영상</string>
    <string name="bottom_nav_shop">쇼핑</string>
    <string name="bottom_nav_profile">프로필</string>
    <string name="login_id">전화번호, 이메일 주소 또는 사용자 이름</string>
    <string name="login_btn">로그인</string>
    <string name="login_find_id">로그인 상세 정보를 잊으셨나요? 로그인 도움말 보기.</string>
    <string name="login_or">또는</string>
    <string name="login_pwd">비밀번호</string>
    <string name="login_face_btn">페이스북으로 로그인</string>
    <string name="login_signup">계정이 없으신가요? 가입하기.</string>
    <string name="signup_phone">전화번호</string>
    <string name="signup_email">이메일</string>
    <string name="signup_login">이미 계정이 있으신가요? 로그인하기</string>
    <string name="signup_phoneNum">휴대폰</string>
    <string name="korea">KR+82</string>
    <string name="signup_notice">Instagram의 업데이트 내용을 SMS로 수신할 수 있으며, 언제든지 수신을 취소할 수 있습니다.</string>
    <string name="next">다음</string>
    <string name="name_and_pwd">이름 및 비밀번호</string>
    <string name="signup_name">성명</string>
    <string name="signup_pwd">비밀번호</string>
    <string name="save_pwdtext">비밀번호 저장</string>
    <string name="signup_sync">계속 진행하여 연락처 동기화하기</string>
    <string name="signup_notsync">연락처를 동기화하지 않고 계속하기</string>
    <string name="signup_detail">연락처를 주기적으로 동기화되고 Instagram 서버에 저장되어 친구를 빠르게 찾고 Instagram 서비스를 개선하는 데 사용됩니다.연락처를 삭제하려면 설정으로 이동하여 연결을 해제하세요. 더 알아보기.</string>
    <string name="birth_text">생일 추가</string>
    <string name="birth_detail1">공개 프로필에 포함되지 않습니다.</string>
    <string name="birth_detail2">왜 생일을 입력해야 하나요?</string>
    <string name="ex_birthday">1995년 4월 18일</string>
    <string name="agree_text">약관 동의</string>
    <string name="agree_detail">Instagram은 회원님의 개인 정보를 안전하게 보호합니다. 새 계정을 만들려면 모든 약관에 동의하세요.</string>
    <string name="agree_all">모두 동의</string>
    <string name="agree_service">서비스 약관(필수)</string>
    <string name="agree_more">더 알아보기</string>
    <string name="agree_data">데이터 정책(필수)</string>
    <string name="agree_location">위치 기반 기능(필수)</string>
    <string name="welcome_text">Instagram에 오신 것을 환영합니다.</string>
    <string name="test">test</string>
    <string name="welcome_detail">팔로우할 사람을 찾고 사진을 공유해보세요. 사용자 이름은 언제든지 변경할 수 있습니다.</string>
    <string name="change_nick">사용자 이름 변경</string>
    <string name="nick">사용자 이름</string>
    <string name="change_text">사용자 이름 변경</string>
    <string name="change_text_detail">계정에서 사용할 사용자 이름을 선택하세요. 사용자 이름은 언제든지 변경 가능합니다.</string>
    <string name="range">계정 공개 범위</string>
    <string name="range_detail">회원님이 공유하는 내용을 볼 수 있는 사람을 선택하세요. 설정에서 언제든지 변경할 수 있습니다.</string>
    <string name="close">비공개</string>
    <string name="close_detail">회원님이 승인한 계정만 회원님의 사진과 동영상을 볼 수 있습니다.</string>
    <string name="open">전체 공개</string>
    <string name="open_detail">누구나 회원님의 사진과 동영상을 볼 수 있습니다.</string>
    <string name="final_profile">프로필 사진이 추가되었습니다</string>
    <string name="change_picture">사진 바꾸기</string>
    <string name="final_share">이 사진을 게시물로 공유</string>
    <string name="final_detail">이 사진을 올려 첫 게시물을 만들어보세요. 사람들이 사진에 좋아요를 누르거나 댓글을 남길 수 있습니다.</string>
    <string name="photo_add">프로필 사진 추가</string>
    <string name="add_text_detail">친구들이 알아볼 수 있도록 프로필 사진을 추가하세요.</string>
    <string name="add_photo">사진 추가</string>
    <string name="jump">건너뛰기</string>
    <string name="emailerror">올바른 이메일 주소를 입력하세요.</string>
    <string name="phoneerror">휴대폰 번호가 정확하지 않습니다. 국가 번호를 포함하여 전체 전화번호를 입력해주세요.</string>
    <string name="user_nickname">nickname</string>
    <string name="like">좋아요</string>
    <string name="new_board">새 게시물</string>
    <string name="gallery">갤러리</string>
    <string name="caption">문구 입력...</string>
    <string name="person_tag">사람 태그하기</string>
    <string name="location_tag">위치 추가</string>
    <string name="caption_other">다른 미디어에도 게시</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="tumblr">Tumblr</string>
    <string name="setting">고급 설정</string>
    <string name="like_count">0개</string>
    <string name="post_nick">작성자</string>
    <string name="comment">댓글 달기...</string>
    <string name="alert">신고...</string>
    <string name="alarm">게시물 알림 설정</string>
    <string name="link">링크 복사</string>
    <string name="share">공유하기...</string>
    <string name="bottom_follow">팔로우 취소</string>
    <string name="hide">숨기기</string>
    <string name="post_other_app">다른 앱에 게시...</string>
    <string name="save_feed">보관</string>
    <string name="delete">삭제</string>
    <string name="update">수정</string>
    <string name="function_comment">댓글 기능 해제</string>
    <string name="dialog_delete">게시물을 삭제하시겠어요?</string>
    <string name="delete_detail">이 게시물을 삭제하지 않으려면 게시물을 보관할 수 있습니다. 보관한 게시물은 회원님만 볼 수 있습니다.</string>
    <string name="update_caption">정보 수정</string>
    <string name="edit">본문 수정입니다.</string>
    <string name="profile_nick">닉네임</string>
    <string name="post">게시물</string>
    <string name="follwer">팔로워</string>
    <string name="follwing">팔로잉</string>
    <string name="edit_profile_btn">프로필 편집</string>
    <string name="upload">게시</string>
    <string name="comment_text">댓글 몇 개</string>
    <string name="date">2020년 12월 14일</string>
    <string name="comment_activity">댓글</string>
    <string name="post_user">작성자</string>
    <string name="test_text">본문내용입니다본문내용입니다본문내용입니다본문내용입니다본문내용입니다</string>
    <string name="time">10시간</string>
    <string name="child_comment">답글 달기</string>
    <string name="user_story">내 스토리</string>
    <string name="delect_select">1개 선택됨</string>
    <string name="comment_delete">댓글 1개가 삭제되었습니다.</string>
    <string name="comment_return">되돌리기</string>
    <string name="shop_text">Shop 검색</string>
    <string name="search_text">계정 검색</string>
    <string name="search_text1">인기</string>
    <string name="search_text2">계정</string>
    <string name="search_text3">태그</string>
    <string name="search_text4">장소</string>
</resources>