<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_text"
        app:layout_constraintBottom_toTopOf="@id/signed_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/welcome_text"
        android:textSize="15sp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/test"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/welcome_detail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/black"
        android:id="@+id/signed_id"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_detail"
        app:layout_constraintBottom_toTopOf="@id/welcome_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_marginBottom="20sp"
       android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:id="@+id/welcome_detail"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/welcome_btn"
        android:textColor="@color/white"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        app:layout_constraintHeight_percent="0.065"
        android:background="@drawable/next_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20sp"
        android:text="@string/next"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_nick"
        android:id="@+id/change_nick"
        android:textColor="@color/next"
        app:layout_constraintTop_toBottomOf="@id/welcome_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>