<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_bg"
   >


    <View
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="10sp"
        android:background="@color/gray"
        android:id="@+id/view1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.15"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:id="@+id/btn1"
        android:padding="12sp"
        android:layout_marginTop="10sp"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1"
        android:text="@string/alert"
        android:textColor="@color/black"
        android:textSize="14sp" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:id="@+id/btn2"
        android:padding="12sp"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1"
        android:text="@string/alarm"
        android:textColor="@color/black"
        android:textSize="14sp" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:id="@+id/btn3"
        android:padding="12sp"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn2"
        android:text="@string/link"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:id="@+id/btn4"
        android:padding="12sp"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn3"
        android:text="@string/share"
        android:textColor="@color/black"
        android:textSize="14sp" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:id="@+id/btn5"
        android:padding="12sp"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4"
        android:text="@string/bottom_follow"
        android:textColor="@color/black"
        android:textSize="14sp" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:id="@+id/btn6"
        android:padding="12sp"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn5"
        android:text="@string/hide"
        android:textColor="@color/black"
        android:textSize="14sp" />


</androidx.constraintlayout.widget.ConstraintLayout>