<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_marginTop="8sp"
                android:layout_alignParentStart="true"
                android:background="@android:color/transparent"
                android:src="@drawable/back_arrow" />
            <LinearLayout
                android:layout_toRightOf="@+id/back_btn"
                android:id="@+id/lay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:background="@drawable/search_background"
                android:orientation="horizontal"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20sp"
                    android:padding="5sp"
                    android:background="@null"
                    android:hint="@string/search_text"
                    android:textSize="20sp" />

            </LinearLayout>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        app:tabIndicatorColor="@color/black"
        app:tabIndicatorFullWidth="true"
        android:layout_marginRight="15sp"
        >

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_text1" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_text2" />
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_text3" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_text4" />

    </com.google.android.material.tabs.TabLayout>

   <!-- <androidx.viewpager.widget.ViewPager
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >
    </androidx.viewpager.widget.ViewPager>-->
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_view"/>

</LinearLayout>