<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/comment_item_layout"
    android:background="@color/app"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ImageView
        android:id="@+id/comment_img"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="10sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/no_img" />
    <TextView
        android:id="@+id/comment_nick"
        android:layout_width="wrap_content"
        tools:text="@string/user_nickname"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/comment_img"
        android:layout_marginLeft="10sp"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="23sp"
        android:layout_height="20sp" />
    <TextView
        android:id="@+id/comment_text"
        android:layout_width="0dp"
        tools:text="@string/caption"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/comment_nick"
        app:layout_constraintWidth_percent="0.6"
        android:layout_marginLeft="10sp"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:layout_marginTop="23sp"
        android:layout_height="35sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/comment_time"
        app:layout_constraintLeft_toRightOf="@id/comment_img"
        android:text="@string/time"
        android:textSize="9sp"
        android:textColor="#979190"
        android:layout_marginLeft="10sp"
        app:layout_constraintTop_toBottomOf="@id/comment_text"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/comment_like_count"
        tools:text="@string/like"
        android:textSize="9sp"
        android:textStyle="bold"
        android:textColor="#979190"
        app:layout_constraintLeft_toRightOf="@id/comment_time"
        app:layout_constraintTop_toBottomOf="@id/comment_text"
        android:layout_marginLeft="15sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/comment_child"
        android:text="@string/child_comment"
        android:textSize="9sp"
        android:textColor="#979190"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/comment_like_count"
        app:layout_constraintTop_toBottomOf="@id/comment_text"
        android:layout_marginLeft="15sp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/like_btn_off"
        android:layout_marginTop="25sp"
        android:layout_marginRight="10sp"
        android:id="@+id/comment_like_btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>