<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/sign_up"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/final_text"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintHeight_percent="0.2"
        android:id="@+id/profile_img"/>


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/final_text"
        android:text="@string/final_profile"
        android:textSize="30sp"
        android:gravity="center"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_img"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/change_picture"
        android:text="@string/change_picture"
        android:textColor="@color/next"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/final_text"
        android:layout_marginTop="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/share_text"
        android:text="@string/final_share"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toBottomOf="@id/change_picture"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/final_toggle"
        android:layout_marginTop="20sp"
        android:layout_marginRight="15sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_picture"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/final_detail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        app:layout_constraintTop_toBottomOf="@id/share_text"
        android:textColor="@color/gray"
        android:id="@+id/final_detail"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/final_btn"
        android:textColor="@color/white"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        app:layout_constraintHeight_percent="0.065"
        android:background="@drawable/next_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/final_detail"
        android:layout_marginTop="10sp"
        android:text="@string/next"/>


</androidx.constraintlayout.widget.ConstraintLayout>