<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/signup_namepwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_and_pwd"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginBottom="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textField2" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10sp"
        android:background="@drawable/edit_background"
        app:endIconMode="clear_text"
        app:layout_constraintHeight_percent="0.065"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textField"
        android:id="@+id/textField2"
        app:hintEnabled="false"
        app:layout_constraintWidth_percent="0.85">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/signup_name"
            android:maxLines="1"
            android:padding="10sp"
            android:inputType="text"
            android:textCursorDrawable="@color/black"
            android:singleLine="true"
            android:textSize="15sp"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10sp"
        android:background="@drawable/edit_background"
        app:endIconMode="clear_text"
        app:hintEnabled="false"
        app:layout_constraintHeight_percent="0.065"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/save_pwd"
        app:layout_constraintWidth_percent="0.85">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/signup_pwd"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10sp"
            android:textCursorDrawable="@color/black"
            android:singleLine="true"
            android:textSize="15sp"
          />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/save_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25sp"
        android:layout_marginTop="10sp"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintBottom_toTopOf="@id/signup_continue_btn" />

    <TextView
        android:id="@+id/save_pwdtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="6sp"
        android:hint="@string/save_pwdtext"
        app:layout_constraintLeft_toRightOf="@id/save_pwd"
        app:layout_constraintBottom_toTopOf="@id/signup_continue_btn" />

    <Button
        android:id="@+id/signup_continue_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/next_btn"
        android:enabled="false"
        android:text="@string/signup_sync"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="10sp"
        app:layout_constraintHeight_percent="0.065"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signup_notsync"
        app:layout_constraintWidth_percent="0.85" />

    <TextView
        android:id="@+id/signup_notsync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/signup_notsync"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="80sp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25sp"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/signup_detail"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>